# MultimediaPlayer

./: CMakeLists.txt  README.md  controlpanel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
model/: playlistmodel.cpp  playlistmodel.h
utils/: utils.h
view/: controlpanel.cpp  controlpanel.h  controlpanel.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  openurl.cpp  openurl.h  openurl.ui  playlist.cpp  playlist.h  playlist.ui  playlistdelegate.cpp  playlistdelegate.h  progressbar.cpp  progressbar.h  progressbar.ui
